optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_strip_client_code.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useClientMount$, useStore, useTask$ } from '@qwik.dev/core';
import mongo from 'mongodb';
import redis from 'redis';
import threejs from 'threejs';
import { a } from './keep';
import { b } from '../keep2';
import { c } from '../../remove';

export const Parent = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useClientMount$(async () => {
		state.text = await mongo.users();
		redis.set(state.text, a, b, c);
	});

	useTask$(() => {
		// Code
	});

	return (
		<div
			shouldRemove$={() => state.text}
			onClick$={() => console.log('parent', state, threejs)}
		>
			<Div
				onClick$={() => console.log('keep')}
				render$={() => state.text}
			/>
			{state.text}
		</div>
	);
});

============================= components/component.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_OeLVnBFyNrs = ()=>import("./component.tsx_component.tsx_Parent_component_useClientMount_OeLVnBFyNrs");
const i_dnei8y1e0fQ = ()=>import("./component.tsx_component.tsx_Parent_component_useTask_dnei8y1e0fQ");
const i_3cuWnRwBx8M = ()=>import("./component.tsx_component.tsx_Parent_component_3cuWnRwBx8M");
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_3cuWnRwBx8M, "component.tsx_Parent_component_3cuWnRwBx8M"));


None
============================= components/component.tsx_component.tsx_Parent_component_useClientMount_OeLVnBFyNrs.js (ENTRY POINT)==

import { c } from "../../remove";
import { b } from "../keep2";
import { a } from "./keep";
import mongo from "mongodb";
import redis from "redis";
export const component.tsx_Parent_component_useClientMount_OeLVnBFyNrs = async ()=>{
	const [state] = useLexicalScope();
	state.text = await mongo.users();
	redis.set(state.text, a, b, c);
};


None
/*
{
  "origin": "components/component.tsx",
  "name": "component.tsx_Parent_component_useClientMount_OeLVnBFyNrs",
  "entry": "entry_segments",
  "displayName": "component.tsx_Parent_component_useClientMount",
  "hash": "OeLVnBFyNrs",
  "canonicalFilename": "component.tsx_component.tsx_Parent_component_useClientMount_OeLVnBFyNrs",
  "path": "components",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useClientMount$",
  "captures": true,
  "loc": [
    386,
    472
  ]
}
*/
============================= components/component.tsx_component.tsx_Parent_component_3cuWnRwBx8M.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_render = ()=>import("./component.tsx");
const i_onClick = ()=>import("./component.tsx");
const i_OeLVnBFyNrs = ()=>import("./component.tsx_component.tsx_Parent_component_useClientMount_OeLVnBFyNrs");
const i_dnei8y1e0fQ = ()=>import("./component.tsx_component.tsx_Parent_component_useTask_dnei8y1e0fQ");
export const component.tsx_Parent_component_3cuWnRwBx8M = ()=>{
	const state = useStore({ text: "" });
	/*#__PURE__*/ useClientMountQrl(/*#__PURE__*/ qrl(i_OeLVnBFyNrs, "component.tsx_Parent_component_useClientMount_OeLVnBFyNrs", [state]));
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_dnei8y1e0fQ, "component.tsx_Parent_component_useTask_dnei8y1e0fQ"));
	return /*#__PURE__*/ _jsxSorted("div", {
		shouldRemove$: /*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_dnei8y1e0fQ, "component.tsx_Parent_component_useTask_dnei8y1e0fQ")),
		on:click: /*#__PURE__*/ useClientMountQrl(/*#__PURE__*/ qrl(i_OeLVnBFyNrs, "component.tsx_Parent_component_useClientMount_OeLVnBFyNrs", [state]))
	}, null, [_jsxSorted(Div, {
		onClick$: /*#__PURE__*/ qrl(i_onClick, "Parent_component_div_Div_onClick"),
		render$: /*#__PURE__*/ qrl(i_render, "Parent_component_div_Div_render", [state])
	}, null, null, 3, null), state.text], 1, null);
};


None
/*
{
  "origin": "components/component.tsx",
  "name": "component.tsx_Parent_component_3cuWnRwBx8M",
  "entry": "entry_segments",
  "displayName": "component.tsx_Parent_component",
  "hash": "3cuWnRwBx8M",
  "canonicalFilename": "component.tsx_component.tsx_Parent_component_3cuWnRwBx8M",
  "path": "components",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    295,
    741
  ]
}
*/
============================= components/component.tsx_component.tsx_Parent_component_useTask_dnei8y1e0fQ.js (ENTRY POINT)==

export const component.tsx_Parent_component_useTask_dnei8y1e0fQ = ()=>{};


None
/*
{
  "origin": "components/component.tsx",
  "name": "component.tsx_Parent_component_useTask_dnei8y1e0fQ",
  "entry": "entry_segments",
  "displayName": "component.tsx_Parent_component_useTask",
  "hash": "dnei8y1e0fQ",
  "canonicalFilename": "component.tsx_component.tsx_Parent_component_useTask_dnei8y1e0fQ",
  "path": "components",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    486,
    506
  ]
}
*/
== DIAGNOSTICS ==

[]
