optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_strip_exports_unused.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
import mongodb from 'mongodb';

export const onGet = () => {
	const data = mongodb.collection.whatever;
	return {
		body: {
		data
		}
	}
};

export default component$(()=> {
	return <div>cmp</div>
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
import mongodb from "mongodb";
const i_G7jVUwdBFEM = ()=>import("./test.tsx_test.tsx_component_G7jVUwdBFEM");
export const onGet = ()=>{
	const data = mongodb.collection.whatever;
	return { body: { data } };
};
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "test.tsx_component_G7jVUwdBFEM"));


None
============================= test.tsx_test.tsx_component_G7jVUwdBFEM.tsx (ENTRY POINT)==

export const test.tsx_component_G7jVUwdBFEM = ()=>{
	return <div>cmp</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    213,
    244
  ]
}
*/
== DIAGNOSTICS ==

[]
