optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_strip_server_code.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, serverLoader$, serverStuff$, $, client$, useStore, useTask$ } from '@qwik.dev/core';
import { isServer } from '@qwik.dev/core';
import mongo from 'mongodb';
import redis from 'redis';
import { handler } from 'serverless';

export const Parent = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		if (!isServer) return;
		state.text = await mongo.users();
		redis.set(state.text);
	});

	serverStuff$(async () => {
		// should be removed too
		const a = $(() => {
			// from $(), should not be removed
		});
		const b = client$(() => {
			// from clien$(), should not be removed
		});
		return [a,b];
	})

	serverLoader$(handler);

	useTask$(() => {
		// Code
	});

	return (
		<div onClick$={() => console.log('parent')}>
			{state.text}
		</div>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_SX4UNdoumFY = ()=>import("./test.tsx_Parent_component_useTask_SX4UNdoumFY");
const i_bMekv3wAtYg = ()=>import("./test.tsx_Parent_component_serverStuff_bMekv3wAtYg");
const i_r7E4EA97DUg = ()=>import("./test.tsx_Parent_component_serverLoader_r7E4EA97DUg");
const i_fNsRmJneFMo = ()=>import("./test.tsx_Parent_component_useTask_1_fNsRmJneFMo");
const i_fxETLug1yE4 = ()=>import("./test.tsx_Parent_component_fxETLug1yE4");
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_fxETLug1yE4, "s_fxETLug1yE4"));


None
============================= test.tsx_Parent_component_serverLoader_r7E4EA97DUg.js (ENTRY POINT)==

import { handler } from "serverless";
export const s_r7E4EA97DUg = handler;


None
/*
{
  "origin": "test.tsx",
  "name": "s_r7E4EA97DUg",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverLoader",
  "hash": "r7E4EA97DUg",
  "canonicalFilename": "test.tsx_Parent_component_serverLoader_r7E4EA97DUg",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "serverLoader$",
  "captures": false,
  "loc": [
    701,
    708
  ]
}
*/
============================= test.tsx_Parent_component_fxETLug1yE4.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
const i_fNsRmJneFMo = ()=>import("./test.tsx_Parent_component_useTask_1_fNsRmJneFMo");
const i_ozOFLdzu7J8 = ()=>import("./test.tsx_Parent_component_serverStuff_b_client_ozOFLdzu7J8");
const i_4DT0Ao6Wy7Y = ()=>import("./test.tsx_Parent_component_serverStuff_a_4DT0Ao6Wy7Y");
export const s_fxETLug1yE4 = ()=>{
	const state = useStore({ text: "" });
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_SX4UNdoumFY, "s_SX4UNdoumFY", [state]));
	/*#__PURE__*/ serverStuffQrl(/*#__PURE__*/ qrl(i_bMekv3wAtYg, "s_bMekv3wAtYg"));
	/*#__PURE__*/ serverLoaderQrl(/*#__PURE__*/ qrl(i_r7E4EA97DUg, "s_r7E4EA97DUg"));
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_fNsRmJneFMo, "s_fNsRmJneFMo"));
	return /*#__PURE__*/ _jsxSorted("div", { on:click: /*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_fNsRmJneFMo, "s_fNsRmJneFMo")) }, null, state.text, 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_fxETLug1yE4",
  "entry": null,
  "displayName": "test.tsx_Parent_component",
  "hash": "fxETLug1yE4",
  "canonicalFilename": "test.tsx_Parent_component_fxETLug1yE4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    277,
    833
  ]
}
*/
============================= test.tsx_Parent_component_useTask_SX4UNdoumFY.js (ENTRY POINT)==

import mongo from "mongodb";
import redis from "redis";
export const s_SX4UNdoumFY = async ()=>{
	const [state] = useLexicalScope();
	if (!true) return;
	state.text = await mongo.users();
	redis.set(state.text);
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_SX4UNdoumFY",
  "entry": null,
  "displayName": "test.tsx_Parent_component_useTask",
  "hash": "SX4UNdoumFY",
  "canonicalFilename": "test.tsx_Parent_component_useTask_SX4UNdoumFY",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    361,
    463
  ]
}
*/
============================= test.tsx_Parent_component_serverStuff_bMekv3wAtYg.js (ENTRY POINT)==

import { clientQrl, qrl } from "@qwik.dev/core";
const i_ozOFLdzu7J8 = ()=>import("./test.tsx_Parent_component_serverStuff_b_client_ozOFLdzu7J8");
const i_4DT0Ao6Wy7Y = ()=>import("./test.tsx_Parent_component_serverStuff_a_4DT0Ao6Wy7Y");
export const s_bMekv3wAtYg = async ()=>{
	const a = /*#__PURE__*/ qrl(i_4DT0Ao6Wy7Y, "s_4DT0Ao6Wy7Y");
	const b = /*#__PURE__*/ clientQrl(/*#__PURE__*/ qrl(i_ozOFLdzu7J8, "s_ozOFLdzu7J8"));
	return [a, b];
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_bMekv3wAtYg",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff",
  "hash": "bMekv3wAtYg",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_bMekv3wAtYg",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "serverStuff$",
  "captures": false,
  "loc": [
    481,
    683
  ]
}
*/
============================= test.tsx_Parent_component_serverStuff_b_client_ozOFLdzu7J8.js (ENTRY POINT)==

export const s_ozOFLdzu7J8 = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "s_ozOFLdzu7J8",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff_b_client",
  "hash": "ozOFLdzu7J8",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_b_client_ozOFLdzu7J8",
  "path": "",
  "extension": "js",
  "parent": "serverStuff",
  "ctxKind": "function",
  "ctxName": "client$",
  "captures": false,
  "loc": [
    608,
    662
  ]
}
*/
============================= test.tsx_Parent_component_serverStuff_a_4DT0Ao6Wy7Y.js (ENTRY POINT)==

export const s_4DT0Ao6Wy7Y = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "s_4DT0Ao6Wy7Y",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff_a",
  "hash": "4DT0Ao6Wy7Y",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_a_4DT0Ao6Wy7Y",
  "path": "",
  "extension": "js",
  "parent": "serverStuff",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    536,
    585
  ]
}
*/
============================= test.tsx_Parent_component_useTask_1_fNsRmJneFMo.js (ENTRY POINT)==

export const s_fNsRmJneFMo = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "s_fNsRmJneFMo",
  "entry": null,
  "displayName": "test.tsx_Parent_component_useTask_1",
  "hash": "fNsRmJneFMo",
  "canonicalFilename": "test.tsx_Parent_component_useTask_1_fNsRmJneFMo",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    722,
    742
  ]
}
*/
== DIAGNOSTICS ==

[]
