optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_transpile_ts_only.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_XumqEURaLxI = ()=>import("./test.tsx_test.tsx_App_component_XumqEURaLxI");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XumqEURaLxI, "test.tsx_App_component_XumqEURaLxI"));


None
============================= test.tsx_test.tsx_App_component_XumqEURaLxI.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./test.tsx");
export const test.tsx_App_component_XumqEURaLxI = (props)=>{
	return <Cmp>
			<p class="stuff" on:click={/*#__PURE__*/ qrl(i_onClick, "App_component_Cmp_p_onClick")}>Hello Qwik</p>
		</Cmp>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_App_component_XumqEURaLxI",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    86,
    210
  ]
}
*/
== DIAGNOSTICS ==

[]
