optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_ts_enums_no_transpile.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export enum Thing {
	A,
	B
}

export const App = component$(() => {
	console.log(Thing.A);
	return (
		<>
			<p class="stuff">Hello Qwik</p>
		</>
	);
});

============================= test.tsx_App_component_ckEPmXZlub0.tsx (ENTRY POINT)==

export const App_component_ckEPmXZlub0 = ()=>{
	console.log(Thing.A);
	return <>
			<p class="stuff">Hello Qwik</p>
		</>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    116,
    208
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export enum Thing {
	A,
	B
}
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[]
