optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_use_client_effect.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useBrowserVisibleTask$, useStore, useStyles$ } from '@qwik.dev/core';

export const Child = component$(() => {
	const state = useStore({
		count: 0
	});

	// Double count watch
	useBrowserVisibleTask$(() => {
		const timer = setInterval(() => {
		state.count++;
		}, 1000);
		return () => {
		clearInterval(timer);
		}
	});

	return (
		<div>
		{state.count}
	</div>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_zqMxaBj0SWU = ()=>import("./test.tsx_test.tsx_Child_component_useBrowserVisibleTask_zqMxaBj0SWU");
const i_80js9RUUsfM = ()=>import("./test.tsx_test.tsx_Child_component_80js9RUUsfM");
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_80js9RUUsfM, "test.tsx_Child_component_80js9RUUsfM"));


None
============================= test.tsx_test.tsx_Child_component_useBrowserVisibleTask_zqMxaBj0SWU.js (ENTRY POINT)==

export const test.tsx_Child_component_useBrowserVisibleTask_zqMxaBj0SWU = ()=>{
	const [state] = useLexicalScope();
	const timer = setInterval(()=>{
		state.count++;
	}, 1e3);
	return ()=>{
		clearInterval(timer);
	};
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Child_component_useBrowserVisibleTask_zqMxaBj0SWU",
  "entry": null,
  "displayName": "test.tsx_Child_component_useBrowserVisibleTask",
  "hash": "zqMxaBj0SWU",
  "canonicalFilename": "test.tsx_test.tsx_Child_component_useBrowserVisibleTask_zqMxaBj0SWU",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useBrowserVisibleTask$",
  "captures": true,
  "loc": [
    222,
    342
  ]
}
*/
============================= test.tsx_test.tsx_Child_component_80js9RUUsfM.js (ENTRY POINT)==

import { _jsxSorted, qrl, useBrowserVisibleTaskQrl, useStore } from "@qwik.dev/core";
export const test.tsx_Child_component_80js9RUUsfM = ()=>{
	const state = useStore({ count: 0 });
	/*#__PURE__*/ useBrowserVisibleTaskQrl(/*#__PURE__*/ qrl(i_zqMxaBj0SWU, "test.tsx_Child_component_useBrowserVisibleTask_zqMxaBj0SWU", [state]));
	return /*#__PURE__*/ _jsxSorted("div", null, null, state.count, 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Child_component_80js9RUUsfM",
  "entry": null,
  "displayName": "test.tsx_Child_component",
  "hash": "80js9RUUsfM",
  "canonicalFilename": "test.tsx_test.tsx_Child_component_80js9RUUsfM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    124,
    393
  ]
}
*/
== DIAGNOSTICS ==

[]
