optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_use_optimization.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useTask$ } from '@qwik.dev/core';
import { CONST } from 'const';
export const Works = component$((props) => {
	const {countNested} = useStore({value:{count:0}}).value;
	const countNested2 = countNested;
	const {hello} = countNested2;
	const bye = hello.bye;
	const {ciao} = bye.italian;


	return (
		<div ciao={ciao} >{foo}</div>
	);
});

============================= test.tsx ==

import { componentQrl, inlinedQrl } from "@qwik.dev/core";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	const { countNested } = useStore({ value: { count: 0 } }).value;
	const countNested2 = countNested;
	const { hello } = countNested2;
	const bye = hello.bye;
	const { ciao } = bye.italian;
	return <div ciao={ciao}>{foo}</div>;
}, "Works_component_t45qL4vNGv0"));


None
== DIAGNOSTICS ==

[]
